220-1 one station on prod